--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p>Har du några frågor? Kontakta oss på <a href="mailto:kontakt@middagsrecept.se">kontakt@middagsrecept.se</a></p>
     </section>
 
+<section id="cta-section">
+    <h2>Laga en klassisk italiensk rätt</h2>
+    <p>Klicka på knappen nedan för att komma till receptet på en klassisk italiensk pasta ragù.</p>
+    <a href="pasta-ragu.html" id="cta-button" data-text="Börja laga" class="cta-btn">Börja laga</a>
+</section>
+
     <footer>
         <p>&copy; 2024 Inspirerande Middagsrecept</p>
     </footer>
