--- a/pasta-ragu.html
+++ b/pasta-ragu.html
@@ -5,124 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klassisk Italiensk Pasta Ragù</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: 'Georgia', serif;
-            background-color: #f9f6f1;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
 
-        header {
-            background-color: #007b5e;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P4LNBQZK');</script>
+    <!-- End Google Tag Manager -->
 
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        #pasta-ragu-recept {
-            text-align: center;
-            padding: 40px 20px;
-        }
-
-        h1, h2 {
-            color: #b22222;
-        }
-
-        #pasta-image {
-            width: 100%;
-            max-width: 600px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            margin-bottom: 30px;
-        }
-
-        .ingredients, .instructions {
-            max-width: 600px;
-            margin: 0 auto;
-            text-align: left;
-        }
-
-        .ingredients ul, .instructions ol {
-            padding-left: 20px;
-        }
-
-        .ingredients li, .instructions li {
-            margin-bottom: 10px;
-        }
-
-        footer {
-            background-color: #007b5e;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P4LNBQZK"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <header>
         <h1>Klassisk Italiensk Pasta Ragù</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Hem</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <section id="pasta-ragu-recept">
-        <!-- Här lägger du in bilden -->
-        <img id="pasta-image" src="pasta-ragu.html.jpg" alt="Pasta Ragù med parmesan och rykande värme">
-        
-        <h2>Läcker Pasta Ragù med Parmesan</h2>
-        <p>En klassisk italiensk rätt som värmer själen och mättar magen. Denna pasta ragù är perfekt för en familjemiddag eller en speciell kväll med vänner.</p>
+    <section>
+        <img src="pasta-ragu.jpg" alt="Läcker Pasta Ragù med parmesan" class="recipe-image">
+        <h2>Recept: Pasta Ragù</h2>
+        <p>
+            Pasta ragù är en klassisk italiensk rätt som kombinerar kött, tomat och örter i en läcker sås som serveras med pasta.
+            Här är hur du gör denna underbara rätt:
+        </p>
+        <h3>Ingredienser:</h3>
+        <ul>
+            <li>400g nötfärs</li>
+            <li>1 gul lök, hackad</li>
+            <li>2 vitlöksklyftor, hackade</li>
+            <li>400g krossade tomater</li>
+            <li>1 dl rödvin</li>
+            <li>3 msk olivolja</li>
+            <li>Salt och peppar</li>
+            <li>Parmesanost, riven</li>
+        </ul>
 
-        <div class="ingredients">
-            <h3>Ingredienser:</h3>
-            <ul>
-                <li>500g köttfärs (nötfärs)</li>
-                <li>1 burk krossade tomater</li>
-                <li>1 stor gul lök</li>
-                <li>2 vitlöksklyftor, finhackade</li>
-                <li>2 matskedar olivolja</li>
-                <li>Salt och peppar</li>
-                <li>Färsk riven parmesan</li>
-            </ul>
-        </div>
-
-        <div class="instructions">
-            <h3>Instruktioner:</h3>
-            <ol>
-                <li>Hetta upp olivolja i en stor panna och fräs lök och vitlök tills de är mjuka.</li>
-                <li>Tillsätt köttfärsen och bryn den tills den får en fin färg.</li>
-                <li>Häll i krossade tomater och låt allt sjuda på låg värme i cirka 30 minuter.</li>
-                <li>Smaka av med salt och peppar.</li>
-                <li>Servera med din favoritpasta och toppa med rikligt med färskriven parmesan.</li>
-            </ol>
-        </div>
+        <h3>Instruktioner:</h3>
+        <ol>
+            <li>Hetta upp olivolja i en stor panna och fräs lök och vitlök tills de är mjuka.</li>
+            <li>Tillsätt nötfärsen och bryn den jämnt.</li>
+            <li>Häll i rödvinet och låt det reducera något.</li>
+            <li>Tillsätt de krossade tomaterna och låt såsen sjuda i cirka 20 minuter.</li>
+            <li>Krydda med salt och peppar efter smak.</li>
+            <li>Servera såsen med nykokt pasta och toppa med riven parmesan.</li>
+        </ol>
     </section>
 
     <footer>
         <p>&copy; 2024 Inspirerande Middagsrecept</p>
     </footer>
+
 </body>
 </html>
