--- a/pasta-ragu.html
+++ b/pasta-ragu.html
@@ -14,6 +14,44 @@
     })(window,document,'script','dataLayer','GTM-P4LNBQZK');</script>
     <!-- End Google Tag Manager -->
 
+    <style>
+        /* Styling för att hantera bildstorlek och layout */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        header {
+            text-align: center;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .recipe-image {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+        }
+
+        h1, h2, h3 {
+            color: #A52A2A; /* Italienskt tema, brun-röd färg */
+        }
+
+        ul, ol {
+            padding-left: 20px;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            color: #777;
+        }
+    </style>
+
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
@@ -26,7 +64,6 @@
     </header>
 
     <section>
-        <img src="pasta-ragu.jpg" alt="Läcker Pasta Ragù med parmesan" class="recipe-image">
         <h2>Recept: Pasta Ragù</h2>
         <p>
             Pasta ragù är en klassisk italiensk rätt som kombinerar kött, tomat och örter i en läcker sås som serveras med pasta.
@@ -53,6 +90,9 @@
             <li>Krydda med salt och peppar efter smak.</li>
             <li>Servera såsen med nykokt pasta och toppa med riven parmesan.</li>
         </ol>
+
+        <!-- Bilden är flyttad till under instruktionerna och har maxbredd justerad -->
+        <img src="pasta-ragu.jpg" alt="Läcker Pasta Ragù med parmesan" class="recipe-image">
     </section>
 
     <footer>
